--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AvactisTestCases.LoginPageTest</td>
+<td>Finding_Brokenlinks</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AdminSignIn</td>
-<td>Regression Smoke </td>
-</tr>
+<td>findBrokenLinks</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
