--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>LoginPageTest.AdminSignIn(java.lang.String,java.lang.String)[pri:0, instance:AvactisTestCases.LoginPageTest@741b3bc3]<br/></td></tr>
-<tr><td>Smoke</td><td>LoginPageTest.AdminSignIn(java.lang.String,java.lang.String)[pri:0, instance:AvactisTestCases.LoginPageTest@741b3bc3]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
