--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78cddf">  <td>22/11/25 14:04:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.loadBrowser()[pri:0, instance:AvactisTestCases.LoginPageTest@741b3bc3]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@144699438</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>22/11/25 14:04:29</td>   <td>5415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.AdminSignIn(java.lang.String,java.lang.String)[pri:0, instance:AvactisTestCases.LoginPageTest@741b3bc3]">AdminSignIn</td> 
-  <td>main@144699438</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/11/30 10:47:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Finding_Brokenlinks.loadBrowser()[pri:0, instance:Finding_Brokenlinks@3cebbb30]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/11/30 10:47:31</td>   <td>7022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Finding_Brokenlinks.findBrokenLinks()[pri:0, instance:Finding_Brokenlinks@3cebbb30]">findBrokenLinks</td> 
+  <td>main@754177595</td>   <td></td> </tr>
 </table>
