--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,48 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="acbf9b">  <td>22/11/22 12:52:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductTypesTest.AddNewProductType()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@420bc288]">AddNewProductType</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="acbf9b">  <td>22/11/22 12:52:08</td>   <td>-5594</td> <td>&nbsp;</td><td title="&gt;&gt;ManageProductTypesTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@420bc288]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="acbf9b">  <td>22/11/22 12:52:55</td>   <td>40963</td> <td>&nbsp;</td><td title="&lt;&lt;ManageProductTypesTest.tearDown()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@420bc288]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="9fc57a">  <td>22/11/22 12:52:56</td>   <td>42527</td> <td>&nbsp;</td><td title="&gt;&gt;ManufacturersTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManufacturersTest@3b4ef7]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="9fc57a">  <td>22/11/22 12:55:04</td>   <td>169985</td> <td>&nbsp;</td><td title="&lt;&lt;ManufacturersTest.tearDown()[pri:0, instance:AvactisTestCases.ManufacturersTest@3b4ef7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="9fc57a">  <td>22/11/22 12:53:01</td>   <td>47047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManufacturersTest.AddManufacturer()[pri:0, instance:AvactisTestCases.ManufacturersTest@3b4ef7]">AddManufacturer</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="8bad7c">  <td>22/11/22 12:55:07</td>   <td>173398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageCategoriesTest.createSubCategory()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@4fdf8f12]">createSubCategory</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="8bad7c">  <td>22/11/22 12:55:04</td>   <td>170264</td> <td>&nbsp;</td><td title="&gt;&gt;ManageCategoriesTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@4fdf8f12]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="8bad7c">  <td>22/11/22 12:55:41</td>   <td>207514</td> <td>&nbsp;</td><td title="&lt;&lt;ManageCategoriesTest.tearDown()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@4fdf8f12]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="67918f">  <td>22/11/22 12:55:42</td>   <td>207936</td> <td>&nbsp;</td><td title="&gt;&gt;ManageProductsTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageProductsTest@27f0ad19]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="67918f">  <td>22/11/22 12:56:27</td>   <td>252817</td> <td>&nbsp;</td><td title="&lt;&lt;ManageProductsTest.tearDown()[pri:0, instance:AvactisTestCases.ManageProductsTest@27f0ad19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="67918f">  <td>22/11/22 12:56:23</td>   <td>248742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductsTest.MoveProduct()[pri:0, instance:AvactisTestCases.ManageProductsTest@27f0ad19]">MoveProduct</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="67918f">  <td>22/11/22 12:55:45</td>   <td>211159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductsTest.AddProduct()[pri:0, instance:AvactisTestCases.ManageProductsTest@27f0ad19]">AddProduct</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="b88171">  <td>22/11/22 12:56:27</td>   <td>253187</td> <td>&nbsp;</td><td title="&gt;&gt;ReviewTest.loadBrowser()[pri:0, instance:AvactisTestCases.ReviewTest@1e8823d2]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="b88171">  <td>22/11/22 12:56:30</td>   <td>256296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReviewTest.SearchReview()[pri:0, instance:AvactisTestCases.ReviewTest@1e8823d2]">SearchReview</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="b88171">  <td>22/11/22 12:57:11</td>   <td>297154</td> <td>&nbsp;</td><td title="&lt;&lt;ReviewTest.tearDown()[pri:0, instance:AvactisTestCases.ReviewTest@1e8823d2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="96bc88">  <td>22/11/22 12:57:44</td>   <td>330577</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTest.tearDown()[pri:0, instance:AvactisTestCases.OrdersTest@2237bada]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="96bc88">  <td>22/11/22 12:57:14</td>   <td>300563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTest.UpdateOrderStatus()[pri:0, instance:AvactisTestCases.OrdersTest@2237bada]">UpdateOrderStatus</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="96bc88">  <td>22/11/22 12:57:11</td>   <td>297456</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTest.loadBrowser()[pri:0, instance:AvactisTestCases.OrdersTest@2237bada]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="d7b780">  <td>22/11/22 12:58:13</td>   <td>358986</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:AvactisTestCases.LoginPageTest@4e7095ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="d7b780">  <td>22/11/22 12:57:48</td>   <td>333985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.AdminSignIn()[pri:0, instance:AvactisTestCases.LoginPageTest@4e7095ac]">AdminSignIn</td> 
-  <td>main@1103505488</td>   <td></td> </tr>
-<tr bgcolor="d7b780">  <td>22/11/22 12:57:45</td>   <td>330814</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.loadBrowser()[pri:0, instance:AvactisTestCases.LoginPageTest@4e7095ac]">&gt;&gt;loadBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1103505488</td>   <td></td> </tr>
+<tr bgcolor="a9a9c1">  <td>22/11/25 15:39:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ManageProductTypesTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@54336c81]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="a9a9c1">  <td>22/11/25 15:39:23</td>   <td>16291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductTypesTest.AddNewProductType()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@54336c81]">AddNewProductType</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="a9a9c1">  <td>22/11/25 15:40:05</td>   <td>57368</td> <td>&nbsp;</td><td title="&lt;&lt;ManageProductTypesTest.tearDown()[pri:0, instance:AvactisTestCases.ManageProductTypesTest@54336c81]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="6794b4">  <td>22/11/25 15:40:06</td>   <td>58755</td> <td>&nbsp;</td><td title="&gt;&gt;ManufacturersTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManufacturersTest@30457e14]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="6794b4">  <td>22/11/25 15:40:11</td>   <td>63480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManufacturersTest.AddManufacturer()[pri:0, instance:AvactisTestCases.ManufacturersTest@30457e14]">AddManufacturer</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="6794b4">  <td>22/11/25 15:40:50</td>   <td>102674</td> <td>&nbsp;</td><td title="&lt;&lt;ManufacturersTest.tearDown()[pri:0, instance:AvactisTestCases.ManufacturersTest@30457e14]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="99a8db">  <td>22/11/25 15:40:54</td>   <td>107302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageCategoriesTest.createSubCategory()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@c1a4620]">createSubCategory</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="99a8db">  <td>22/11/25 15:40:50</td>   <td>103269</td> <td>&nbsp;</td><td title="&gt;&gt;ManageCategoriesTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@c1a4620]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="99a8db">  <td>22/11/25 15:41:33</td>   <td>146174</td> <td>&nbsp;</td><td title="&lt;&lt;ManageCategoriesTest.tearDown()[pri:0, instance:AvactisTestCases.ManageCategoriesTest@c1a4620]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="65f8a3">  <td>22/11/25 15:41:39</td>   <td>151459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductsTest.AddProduct()[pri:0, instance:AvactisTestCases.ManageProductsTest@5710768a]">AddProduct</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="65f8a3">  <td>22/11/25 15:42:22</td>   <td>194645</td> <td>&nbsp;</td><td title="&lt;&lt;ManageProductsTest.tearDown()[pri:0, instance:AvactisTestCases.ManageProductsTest@5710768a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="65f8a3">  <td>22/11/25 15:41:34</td>   <td>147105</td> <td>&nbsp;</td><td title="&gt;&gt;ManageProductsTest.loadBrowser()[pri:0, instance:AvactisTestCases.ManageProductsTest@5710768a]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="65f8a3">  <td>22/11/25 15:42:20</td>   <td>193298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductsTest.MoveProduct()[pri:0, instance:AvactisTestCases.ManageProductsTest@5710768a]">MoveProduct</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="677b68">  <td>22/11/25 15:42:22</td>   <td>195103</td> <td>&nbsp;</td><td title="&gt;&gt;ReviewTest.loadBrowser()[pri:0, instance:AvactisTestCases.ReviewTest@1162410a]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="677b68">  <td>22/11/25 15:42:26</td>   <td>199124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReviewTest.SearchReview()[pri:0, instance:AvactisTestCases.ReviewTest@1162410a]">SearchReview</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="677b68">  <td>22/11/25 15:43:08</td>   <td>240995</td> <td>&nbsp;</td><td title="&lt;&lt;ReviewTest.tearDown()[pri:0, instance:AvactisTestCases.ReviewTest@1162410a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="f3d96c">  <td>22/11/25 15:43:09</td>   <td>241535</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTest.loadBrowser()[pri:0, instance:AvactisTestCases.OrdersTest@515f4131]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="f3d96c">  <td>22/11/25 15:43:50</td>   <td>282752</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTest.tearDown()[pri:0, instance:AvactisTestCases.OrdersTest@515f4131]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="f3d96c">  <td>22/11/25 15:43:13</td>   <td>245617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTest.UpdateOrderStatus()[pri:0, instance:AvactisTestCases.OrdersTest@515f4131]">UpdateOrderStatus</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="8dacc6">  <td>22/11/25 15:43:50</td>   <td>283151</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.loadBrowser()[pri:0, instance:AvactisTestCases.LoginPageTest@2472c7d8]">&gt;&gt;loadBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114270481</td>   <td></td> </tr>
+<tr bgcolor="8dacc6">  <td>22/11/25 15:43:56</td>   <td>288631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.AdminSignIn(java.lang.String,java.lang.String)[pri:0, instance:AvactisTestCases.LoginPageTest@2472c7d8]">AdminSignIn</td> 
+  <td>main@2114270481</td>   <td></td> </tr>
 </table>
