--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -20,22 +20,6 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>ManufaturersTest (0/1/0)</td><td valign='top' align='right'>
-  <a href='ManufaturersTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>orderTest (0/1/0)</td><td valign='top' align='right'>
-  <a href='orderTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
 <table width='100%' class='test-passed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>LoginPages (1/0/0)</td><td valign='top' align='right'>
@@ -70,8 +54,24 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
+<table style='width: 100%'><tr><td valign='top'>ManufaturersTest (1/0/0)</td><td valign='top' align='right'>
+  <a href='ManufaturersTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
 <table style='width: 100%'><tr><td valign='top'>ReviewTest (1/0/0)</td><td valign='top' align='right'>
   <a href='ReviewTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>orderTest (1/0/0)</td><td valign='top' align='right'>
+  <a href='orderTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
